--- a/site/index.html
+++ b/site/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Coursera!</title>
+	<title>Our Menu</title>
 </head>
 <body>
-<h1>Hello Coursera</h1>
-<p>Paragraph 1</p>
-<p>Paragraph 2</p>
+<section><title>Beef</title></section>
+<section><title>Chicken</title></section>
+<section><title>Sushi</title></section>
 </body>
 </html>
